--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-svg": "^16.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
