--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "^5.0.1",
-    "react-svg": "^16.3.0"
+    "react-svg": "^16.3.0",
+    "rxjs": "^7.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
